# cgPraktikum2023

./: .clang-tidy  .gitignore  CMakeLists.txt  GUIDE.md  README.md
demo/: CMakeLists.txt  meshlife_demo.cpp
include/: gl_helper.h
include/meshlife/: navigator.h  paths.h  shadertype.h  stamps.h
include/meshlife/algorithms/: helpers.h  mesh_automaton.h  mesh_gol.h  mesh_lenia.h
include/meshlife/visualization/: custom_meshviewer.h  custom_renderer.h  viewer.h
src/: CMakeLists.txt  navigator.cpp
src/algorithms/: helpers.cpp  mesh_automaton.cpp  mesh_gol.cpp  mesh_lenia.cpp
src/shaders/: Lcamera_movement_AO.frag  Lcamera_movement_no_light.frag  Lcamera_movement_phong.frag  Lcamera_movement_soft_shadows.frag  apollonian.frag  bulb_test.frag  bunter_shader.frag  camera_movement.frag  camera_movement2.frag  mandelbulb.frag  mengercube_test.frag  newmenger_test.frag  passthrough.vert  phong.frag  phong.vert  reflective_sphere.frag  reflective_sphere.vert  simple.frag  simple.vert  simple_color.frag  simple_color.vert  simples_beispiel.frag  skybox.frag  skybox.vert  texture.frag  z_mengercross.frag  z_mengersponge.frag  z_sphere_mod.frag
src/visualization/: custom_meshviewer.cpp  custom_renderer.cpp  viewer.cpp
